tests/fixtures/invalid/non_char_inferred_array_string_initializer.c
int main(void) {
    int values[] = "nope";
    return values[0];
}
